update ba and pg for latest g2o interface.

--- a/catchup/CMakeLists.txt
+++ b/catchup/CMakeLists.txt
@@ -30,3 +30,5 @@ endif(OpenCV_INCLUDE_DIRS)
 #####################################################################
 
 ADD_SUBDIRECTORY(g2o)
+#ADD_SUBDIRECTORY(gtsam)
+
