add ply generator

--- a/catchup/CMakeLists.txt
+++ b/catchup/CMakeLists.txt
@@ -36,4 +36,6 @@ ADD_SUBDIRECTORY(fbow)
 ADD_SUBDIRECTORY(dbow3)
 ADD_SUBDIRECTORY(gtsam)
 ADD_SUBDIRECTORY(simd)
+ADD_SUBDIRECTORY(std)
+ADD_SUBDIRECTORY(ply)
 
