--- a/catchup/CMakeLists.txt
+++ b/catchup/CMakeLists.txt
@@ -6,6 +6,17 @@ PROJECT(${execName})
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+##
+#option
+option(USE_G2O "catchup G2O" OFF)
+option(USE_FBoW "catchup FBoW" OFF)
+option(USE_DBoW3 "catchup DBoW3" OFF)
+option(USE_GTSAM "catchup GTSAM" OFF)
+option(USE_SIMD "catchup SIMD" OFF)
+option(USE_PLY "catchup PLY" OFF)
+option(USE_ZEROMQ "catchup ZEROMQ" OFF)
+##
+
 #####################################################################
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 
@@ -30,12 +41,32 @@ if(OpenCV_INCLUDE_DIRS)
 endif(OpenCV_INCLUDE_DIRS)
 
 #####################################################################
-
-ADD_SUBDIRECTORY(g2o)
-ADD_SUBDIRECTORY(fbow)
-ADD_SUBDIRECTORY(dbow3)
-ADD_SUBDIRECTORY(gtsam)
-ADD_SUBDIRECTORY(simd)
 ADD_SUBDIRECTORY(std)
-ADD_SUBDIRECTORY(ply)
 
+if(USE_G2O)
+ADD_SUBDIRECTORY(g2o)
+endif(USE_G2O)
+
+if(USE_FBoW)
+ADD_SUBDIRECTORY(fbow)
+endif(USE_FBoW)
+
+if(USE_DBoW3)
+ADD_SUBDIRECTORY(dbow3)
+endif(USE_DBoW3)
+
+if(USE_GTSAM)
+ADD_SUBDIRECTORY(gtsam)
+endif(USE_GTSAM)
+
+if(USE_SIMD)
+ADD_SUBDIRECTORY(simd)
+endif(USE_SIMD)
+
+if(USE_PLY)
+ADD_SUBDIRECTORY(ply)
+endif(USE_PLY)
+
+if(USE_ZEROMQ)
+ADD_SUBDIRECTORY(zeromq)
+endif(USE_ZEROMQ)
