--- a/catchup/zeromq/CMakeLists.txt
+++ b/catchup/zeromq/CMakeLists.txt
@@ -9,3 +9,4 @@ ADD_SUBDIRECTORY(socket_1_server)
 ADD_SUBDIRECTORY(socket_1_client)
 ADD_SUBDIRECTORY(socket_2_server)
 ADD_SUBDIRECTORY(socket_2_client)
+ADD_SUBDIRECTORY(socket_2_client_pose)
