add nano gui sample

--- a/catchup/CMakeLists.txt
+++ b/catchup/CMakeLists.txt
@@ -16,6 +16,8 @@ option(USE_SIMD "catchup SIMD" OFF)
 option(USE_PLY "catchup PLY" OFF)
 option(USE_ZEROMQ "catchup ZEROMQ" OFF)
 option(USE_CV "catchup CV" OFF)
+option(USE_NANO "catchup NANO" OFF)
+option(USE_CERES "catchup CERES" OFF)
 ##
 
 #####################################################################
@@ -75,3 +77,11 @@ endif(USE_ZEROMQ)
 if(USE_CV)
 ADD_SUBDIRECTORY(cv)
 endif(USE_CV)
+
+if(USE_NANO)
+ADD_SUBDIRECTORY(nano)
+endif(USE_NANO)
+
+if(USE_CERES)
+ADD_SUBDIRECTORY(ceres)
+endif(USE_CERES)
