add powell function

--- a/catchup/ceres/CMakeLists.txt
+++ b/catchup/ceres/CMakeLists.txt
@@ -24,3 +24,4 @@ endif(GFLAGS_INCLUDE_DIRS)
 ADD_SUBDIRECTORY(LinearFunction)
 ADD_SUBDIRECTORY(QuadraticFunction)
 ADD_SUBDIRECTORY(CubicFunction)
+ADD_SUBDIRECTORY(PowellFunction)
