--- a/catchup/ceres/CMakeLists.txt
+++ b/catchup/ceres/CMakeLists.txt
@@ -25,3 +25,4 @@ ADD_SUBDIRECTORY(LinearFunction)
 ADD_SUBDIRECTORY(QuadraticFunction)
 ADD_SUBDIRECTORY(CubicFunction)
 ADD_SUBDIRECTORY(PowellFunction)
+ADD_SUBDIRECTORY(2d-2dCorrespondence)
