--- a/catchup/ceres/CMakeLists.txt
+++ b/catchup/ceres/CMakeLists.txt
@@ -26,3 +26,5 @@ ADD_SUBDIRECTORY(QuadraticFunction)
 ADD_SUBDIRECTORY(CubicFunction)
 ADD_SUBDIRECTORY(PowellFunction)
 ADD_SUBDIRECTORY(2d-2dCorrespondence)
+ADD_SUBDIRECTORY(3d-3dCorrespondence)
+ADD_SUBDIRECTORY(BundleQuaternion)
