add EuRoC Loader

--- a/catchup/ceres/CMakeLists.txt
+++ b/catchup/ceres/CMakeLists.txt
@@ -28,3 +28,4 @@ ADD_SUBDIRECTORY(PowellFunction)
 ADD_SUBDIRECTORY(2d-2dCorrespondence)
 ADD_SUBDIRECTORY(3d-3dCorrespondence)
 ADD_SUBDIRECTORY(BundleQuaternion)
+ADD_SUBDIRECTORY(VisualInertial)
