--- a/catchup/ceres/CMakeLists.txt
+++ b/catchup/ceres/CMakeLists.txt
@@ -27,5 +27,5 @@ ADD_SUBDIRECTORY(CubicFunction)
 ADD_SUBDIRECTORY(PowellFunction)
 ADD_SUBDIRECTORY(2d-2dCorrespondence)
 ADD_SUBDIRECTORY(3d-3dCorrespondence)
-ADD_SUBDIRECTORY(BundleQuaternion)
-ADD_SUBDIRECTORY(VisualInertial)
+ADD_SUBDIRECTORY(BundleAdjustment)
+#ADD_SUBDIRECTORY(VisualInertial)
