--- a/catchup/g2o/CMakeLists.txt
+++ b/catchup/g2o/CMakeLists.txt
@@ -8,3 +8,4 @@ endif(G2O_INCLUDE_DIR)
 ADD_SUBDIRECTORY(PoseGraph)
 ADD_SUBDIRECTORY(BundleAdjustment)
 ADD_SUBDIRECTORY(LinearFunction)
+ADD_SUBDIRECTORY(CubicFunction)
