add g2o quadratic function

--- a/catchup/g2o/CMakeLists.txt
+++ b/catchup/g2o/CMakeLists.txt
@@ -9,3 +9,4 @@ ADD_SUBDIRECTORY(PoseGraph)
 ADD_SUBDIRECTORY(BundleAdjustment)
 ADD_SUBDIRECTORY(LinearFunction)
 ADD_SUBDIRECTORY(CubicFunction)
+ADD_SUBDIRECTORY(QuadraticFunction)
