add g2o powell function

--- a/catchup/g2o/CMakeLists.txt
+++ b/catchup/g2o/CMakeLists.txt
@@ -10,3 +10,4 @@ ADD_SUBDIRECTORY(BundleAdjustment)
 ADD_SUBDIRECTORY(LinearFunction)
 ADD_SUBDIRECTORY(CubicFunction)
 ADD_SUBDIRECTORY(QuadraticFunction)
+ADD_SUBDIRECTORY(PowellFunction)
